--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,3 @@
-
-
-
 ######################### theme kunka condigure ##############################################
 # Where things are
 source:       .
@@ -15,7 +12,7 @@ include:      [".htaccess"]
 exclude:      []
 keep_files:   [".git", ".svn"]
 encoding:     "utf-8"
-markdown: "kramdown,kramdown"
+markdown_ext: "markdown,mkdown,mkdn,mkd,md"
 textile_ext:  "textile"
 
 # Filtering Content
@@ -116,8 +113,8 @@ disqus:
 #################################### global configure #######################################
 
 username: soloBike
-baseurl: /StrayBirds
-markdown: redcarpet
+baseurl: /soloBikes
+markdown: kramdown
 safe: false
 highlighter: pygments
 title: 飞鸟集
